<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ef5cf"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="66dp"
        android:text="@string/klasifikasi_jenis_plastik"
        android:textAlignment="center"
        android:textColor="#304b3f"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/background"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/plastic_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="24dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/img_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_kamera"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#304b3f"
        android:elevation="15dp"
        android:text="@string/kamera"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/button_galeri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plastic_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_galeri"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#304b3f"
        android:elevation="15dp"
        android:text="@string/galeri"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_kamera"
        app:layout_constraintTop_toBottomOf="@+id/plastic_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_klasifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_kamera">

        <TextView
            android:id="@+id/hasil_klasifikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/hasil_klasifikasi"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/klasifikasi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/klasifikasi_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/confidence"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hasil_klasifikasi" />

        <TextView
            android:id="@+id/confidence_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/confidence_num"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/klasifikasi_name" />

        <TextView
            android:id="@+id/alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="24dp"
            android:text="@string/alert"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confidence" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_howto"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#9ef5cf"
            android:drawableEnd="@drawable/icon_chevron_right"
            android:text="@string/pengolahan"
            android:textAlignment="textStart"
            android:textColor="#304b3f"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alert"
            app:strokeColor="#304b3f"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>